fix spacing between report product count and update buttons

--- a/totalimpactwebapp/static/less/report.less
+++ b/totalimpactwebapp/static/less/report.less
@@ -88,10 +88,9 @@ body.report {
    float:right;
    div#num-items {
       color:#777;
-      padding-top: 41px;
+      padding: 41px 7px 0 0;
       display: block;
       float: right;
-      padding-right: 11px;
       font-size: 14px;
       span.value {font-weight: bold; font-size: 16px;}
       a {
@@ -101,7 +100,6 @@ body.report {
    }
 
    div#report-button {
-      width: 300px;
       float:right;
       margin-top: 37px;
       div.update {
